--- a/main/templates/main/user/user_homepage.html
+++ b/main/templates/main/user/user_homepage.html
@@ -104,7 +104,7 @@
     <div class="homepage-container">
 
         
-        <h1>Homepage 1</h1>
+        <h1>Homepage</h1>
         
       
         <p>Vaše ime: {{ user.username }}</p>  
